# challenge-juntos-somos-mais

./: README.md  docker-compose.yml
app/: Dockerfile  pyproject.toml  requirements.txt
app/accounts/migrations/: 0001_initial.py
app/accounts/models/: __init__.py  name.py  user.py
app/config/: routes.py  settings.py  urls.py
app/core/: mixins.py  utils.py  viewsets.py
app/core/migrations/: 0001_initial.py  0002_phone.py  0003_picture.py
app/core/models/: __init__.py  location.py  phone.py  picture.py
app/tests/: unit_tests.py
